# offline-go

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
crates/go_rules/: Cargo.toml
crates/go_rules/src/: board.rs  color.rs  error.rs  game.rs  lib.rs  point.rs  zobrist.rs
scripts/importers/: joseki.ts  puzzles.ts  sgf.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  commands.rs  errors.rs  lib.rs  main.rs  rules_registry.rs
src-tauri/src/db/: mod.rs
src/components/: GoBoard.tsx
src/hooks/: useAppInitialization.ts  useGoGameSession.ts
src/lib/glicko/: glicko2.ts  index.ts
src/lib/gtp/: manager.ts
src/lib/pairings/: index.ts  swiss.ts
src/lib/rules/: api.ts  types.ts
src/lib/storage/: index.ts  localStore.ts  sync.ts
src/pages/: HomePage.tsx  PlayersPage.tsx  PuzzlesPage.tsx  SettingsPage.tsx  TournamentsPage.tsx
src/state/: appState.ts  syncStore.ts
src/styles/: main.css
