[package]
name = "offline-go"
version = "0.1.0"
description = "Local-first Go server"
authors = ["you"]
edition = "2021"

[lib]
name = "offline_go_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.94"
once_cell = "1.20.2"
parking_lot = "0.12.1"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono", "blob", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
go_rules = { path = "../crates/go_rules" }
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
time = { version = "0.3", features = ["serde", "macros"] }
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "process", "sync", "time", "io-util"] }
uuid = { version = "1.11", features = ["serde", "v4"] }

[features]
default = []

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
